--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Drag And Drop</title>
+    <title>D-Report</title>
+    <meta name="description" content="D-Report is a tool for building custom reports that works on top of Daftra ERP.">
+
+    <style>.cls-1{fill:#8890a2;}.cls-2{fill:#b2b6c2;}.cls-3{fill:#445672;}.cls-4{fill:#637089;}</style>
   </head>
   <body>
     <noscript>Arraste e solte cards.</noscript>
