--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/PNG_d-report.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -27,7 +27,13 @@
     <title>D-Report</title>
     <meta name="description" content="D-Report is a tool for building custom reports that works on top of Daftra ERP.">
 
-    <style>.cls-1{fill:#8890a2;}.cls-2{fill:#b2b6c2;}.cls-3{fill:#445672;}.cls-4{fill:#637089;}</style>
+    <style>
+      body{background-color: #1e293b;}
+    .cls-1{fill:#8890a2;}
+    .cls-2{fill:#b2b6c2;}
+    .cls-3{fill:#445672;}
+    .cls-4{fill:#637089;}
+    </style>
   </head>
   <body>
     <noscript>Arraste e solte cards.</noscript>
