added filter on cols . error handling for internet connection . hook for creating colsSettings . new context for reportData

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <meta name="description" content="D-Report is a tool for building custom reports that works on top of Daftra ERP.">
 
     <style>
-      body{background-color: #1e293b;}
+      .bg-dark{background-color: #1e293b;}
     .cls-1{fill:#8890a2;}
     .cls-2{fill:#b2b6c2;}
     .cls-3{fill:#445672;}
